--- a/BattleShip/.classpath
+++ b/BattleShip/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/Program Files/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.104.1.v20150825-0743.jar" sourcepath="C:/Users/Dimaric/swt-4.5-win32-win32-x86_64/src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
