--- a/BattleShip/.classpath
+++ b/BattleShip/.classpath
@@ -3,5 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Program Files/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.104.1.v20150825-0743.jar" sourcepath="C:/Users/Dimaric/swt-4.5-win32-win32-x86_64/src.zip"/>
+	<classpathentry kind="lib" path="C:/Program Files/eclipse/plugins/org.eclipse.ui.forms_3.6.200.v20150506-2029.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/eclipse/plugins/org.eclipse.jface_3.11.0.v20150602-1400.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/eclipse/plugins/org.eclipse.equinox.common_3.7.0.v20150402-1709.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/eclipse/plugins/org.eclipse.core.commands_3.7.0.v20150422-0725.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
