добавил пакет widget доделал i18n и l10n

--- a/BattleShip/resources/battleShip.properties
+++ b/BattleShip/resources/battleShip.properties
@@ -24,3 +24,35 @@ loadSettings=Load
 applySettings=Apply
 invalidFieldSize=Invalid Field Size
 invalidFieldSizeMessage=Field size to small. Set minimal field size.
+userUsed= Username already in use
+wrongMessage=Wrong message
+fail=Fail
+response=response
+unknownMessage=Unknown message
+timeout=Timeout
+noResponse=no response
+errorConnect=connect error
+player=Player
+ready=placed ship
+nowTurn=Now turn
+ships=ships<-
+shipIsHitted=ship is hitted
+errorMoveMine=In this phase mine doen't move.
+firstMove=First move
+randomButton=Random
+startButton=Start
+destroyers=Destroyers
+cruisers=Cruisers
+battleships=BattleShips
+aerocariers=Aerocariers
+mines=Mines
+notAllShips=Not all ships placed.
+notAllMines=Not all mines placed.
+movedShip=moved ship
+shotOn=shot on
+win=win
+paddedOnMine=padded on mine at
+lossShip=loss his ship at
+wait=Wait connection
+waitingPlayer=Waiting remote player...
+cancel=Cancel
