поправил redraw GUI добавил функционал кнопок save/load

--- a/BattleShip/resources/battleShip.properties
+++ b/BattleShip/resources/battleShip.properties
@@ -56,3 +56,7 @@ lossShip=loss his ship at
 wait=Wait connection
 waitingPlayer=Waiting remote player...
 cancel=Cancel
+invalidOptionFile=Invalid format
+invalidOptionFileMessage=Invalid fooption file format.
+fileNotFound=File not found
+fileNotFoundMessage=Option file not found.
