пофиксил баг с переворотом корабля убарл часть мусора в игроках добавил умный рандом

--- a/BattleShip/resources/battleShip.properties
+++ b/BattleShip/resources/battleShip.properties
@@ -60,3 +60,4 @@ invalidOptionFile=Invalid format
 invalidOptionFileMessage=Invalid fooption file format.
 fileNotFound=File not found
 fileNotFoundMessage=Option file not found.
+randomException=Random unfortunatly exit
